--- a/Task 1.ipynb
+++ b/Task 1.ipynb
@@ -58,7 +58,7 @@
         "id": "TH30yJksQeW5"
       },
       "source": [
-        "tran_data = pd.read_excel(\"/content/QVI_transaction_data.xlsx\")"
+        "tran_data = pd.read_excel("QVI_transaction_data.xlsx")"
       ],
       "execution_count": 10,
       "outputs": []
